syntax = "proto3";
package web_searching;

message WebSearchRequest {
    string text = 1;
}

message WebSearchResponse {
    message Result {
        message FoundEntry {
            string text = 1;
        }

        string url = 1;
        repeated FoundEntry entries = 2;
    }

    repeated Result results = 1;
}

service WebSearchingApi {
    rpc Search(WebSearchRequest) returns (WebSearchResponse);
}